# bardic-lore

./: .gitignore  package-lock.json  package.json  tailwind.config.ts
src/: app.html  tailwind.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: files.rs  lib.rs  main.rs  playback.rs  settings.rs
src/lib/: CurrentlyPlaying.svelte  LeftSidebar.svelte  PlayerBar.svelte  SongBox.svelte  types.ts
src/lib/left-sidebar-tabs/: AudioSources.svelte  SourceBox.svelte  Tags.svelte
src/routes/: +layout.svelte  +page.svelte
