[package]
name = "bardic_lore"
version = "0.1.0"
description = "An app to organize music with tags and stream them to Discord"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bardic_lore_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.3", features = [] }
rodio = { version = "0.19.0", features = [
    "symphonia-all",
], default-features = false }
tauri-plugin-dialog = "2.0.0-rc"
dirs = "5.0.1"
thiserror = "1.0.63"
toml = "0.8.19"
tauri-plugin-fs = "2.0.0-rc"
symphonia = "0.5.4"
